style.css
/* ... */
.date-badge .month {
    font-size: 1rem;
    text-transform: uppercase;
}

.card-content {
    padding: 20px;
}

.card-content h4 {
    margin-bottom: 10px;
    color: var(--primary-color);
}

.meta {
    font-size: 1rem;
    color: var(--grey);
    margin-bottom: 5px;
}

/*
    SECTION: NEWS
*/
.header-between {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    flex-wrap: wrap;
    gap: 20px;
    text-align: left;
}

.news-card {
    display: flex;
    flex-direction: column;
    transition: transform 0.3s;
}

.news-card:hover {
    transform: translateY(-5px);
}

.news-card img {
    border-radius: 10px;
    margin-bottom: 15px;
    background-color: var(--bg-light);
    width: 100%;
    height: 250px;
    object-fit: cover;
}

.news-card h4 {
    margin-bottom: 10px;
    color: var(--primary-color);
}

.link-blue {
    color: var(--accent-color1);
    font-weight: 600;
    margin-top: auto;
}

/*
    FOOTER
*/
.footer {
    background-color: var(--primary-color);
    color: var(--white);
    padding: 60px 0 20px;
}

.footer-flex {
    display: flex;
    flex-wrap: wrap;
    gap: 40px;
    justify-content: space-between;
    margin-bottom: 40px;
}

.footer-col {
    flex: 1 1 250px;
}

.footer h5 {
    font-size: 0.9rem;
    margin-bottom: 20px;
}

.footer p {
    font-size: 0.8rem;
    margin-bottom: 10px;
    opacity: 0.9;
}

.small {
    font-size: 0.7rem;
    opacity: 0.7;
}

.footer-form input {
    width: 100%;
    padding: 12px;
    margin-bottom: 10px;
    border-radius: 5px;
    background: var(--grey);
    color: var(--white);
}

.footer-form input::placeholder {
    color: var(--bg-light);
}

.btn-submit {
    width: 100%;
    background-color: var(--accent-color1);
    color: var(--white);
}

.footer-bottom {
    border-top: 1px solid var(--grey);
    padding-top: 20px;
    text-align: center;
    font-size: 1rem;
    opacity: 0.6;
}

/* Scroll to Top Button */
#to-top{
    position:fixed;
    bottom:20px;
    right:20px;
    display:none;
    transition: 0.3s ease
}
/* Botao do menu do telemovel*/
.header-menu{
    display:none;
    cursor: pointer;
    flex-direction: column;
    gap: 5px;
    padding: 10px;
}

.header-menu span {
    display: block;
    width: 30px;
    height: 3px;
    background-color: var(--primary-color);
    border-radius: 3px;
    transition: all 0.3s ease; 
}
/* --- Media Queries (Mobile/Tablets) --- */
@media (max-width: 768px) {

    .header-menu {
        display: flex;
    }

    .nav-links ul {
        display: none;
        flex-direction: column;
        gap: 15px;
        position: absolute;
        top: 65px;
        right: 0;
        width: 200px;
        background-color: var(--bg-color); 
        border: 1px solid;
        padding: 20px;
        border-radius: 8px;
        z-index: 9999;
    }

    .nav-links.active ul {
        display: flex;
    }

    .nav-links ul li a {
        color: var(--text-color);
    }

    .nav-links ul li a.contacts {
        background-color: var(--primary-color);
        color: var(--white);
        text-align: center;
    }


    .header {
        overflow: visible; 
    }

    .hero h1 {
        font-size: 2rem;
    }

    .about-flex {
        flex-direction: column;
    }

    .header-between {
        flex-direction: column;
        align-items: flex-start;
    }

    .events-track .event-card {
        flex: 0 0 100%;
    }


/* --- Dark Mode --- */
    .event-card {
        max-width: 250px;
    }

    #grafico {
        display:flex;
        flex-direction: column;
        align-items: wrap;
        padding:10px
    }

    .partners-flex {
        flex-direction: column;
    }
}

/*
    THEMES (DARK MODE)
*/
html[data-theme="dark"] {
    --accent-color: #29B89E;
    --accent-color1: #3371F2;
    --bg-light: var(--primary-color);
    --bg-color: #08192B;
    --text-color: #cdd5e0;
    --grey: #9ab;
}

html[data-theme="dark"] .header {
    background-color: var(--primary-color);
    box-shadow: 0 2px 10px rgba(0,0,0,0.2);
}

html[data-theme="dark"] .logo,
html[data-theme="dark"] .nav-links a {
    color: var(--white);
}

html[data-theme="dark"] .nav-links a:hover {
    color: var(--accent-color);
}
html[data-theme="dark"] .header-menu span {
    background-color: var(--white);
}

html[data-theme="dark"] .theme-toggle-btn {
    border-color: var(--white);
    color: var(--white);
    transition: ease 0.3s;
}
 html[data-theme="dark"] .contacts{
    background-color: var(--accent-color1);
    
 }
html[data-theme="dark"] .btn-primary  {
    background-color: var(--accent-color1);
}

html[data-theme="dark"] h2,
html[data-theme="dark"] .partners-section h3,
html[data-theme="dark"] .card-content h4,
html[data-theme="dark"] .news-card h4 {
    color: var(--white);
}

html[data-theme="dark"] .card-icon {
    background: var(--accent-color1);
}

html[data-theme="dark"] .btn-text {
    color: var(--white);
    background: var(--bg-color);
}

html[data-theme="dark"] .btn-text:hover {
    background-color: var(--accent-color);
    color: var(--white);
}

html[data-theme="dark"] .date-badge {
    background: var(--bg-light);
    color: var(--white);
}

html[data-theme="dark"] .footer {
    background-color: var(--primary-color);
}

html[data-theme="dark"] .event-card {
    background: var(--primary-color);
    border-color: var(--grey);
}

html[data-theme="dark"] .event-nav-btn {
    background: var(--accent-color1);
    color: var(--white);
}

html[data-theme="dark"] .event-nav-btn:hover {
    background: var(--accent-color);
}

html[data-theme="dark"] .footer-form input {
    background: var(--grey);
}

html[data-theme="dark"] .footer-bottom {
    border-top-color: var(--grey);
}
/* ... */

